# Rust-LeetCode

./: Cargo.toml  README.md
src/: main.rs  solutions.rs
src/solutions/: s0136_single_number.rs  s1232.rs  s1232_check_if_it_is_a_straight_line.rs
