[package]
name = "leetcode"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking"]}

[dev-dependencies]
test-case = "1.0.0"